[package]
name = "drive_rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel-print = "0.1.0"
kernel-alloc = "0.1.0"
obfstr = "0.3.0"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]

[build-dependencies]
winreg = "0.9.0"
failure = "0.1.8"
